@@ -68,6 +68,9 @@ Tests:
   - compressed (done)
   - (compressed) with parent (done)
 
+20141119
+* small fixes for stand-alone usage of libfvalue
+
 20141114
 * code clean up
 
